Mozilla/IE strict compatibility: document.documentElement.scroll{Top,Left} concern the canvas, not the root block.

fix regression on linuxfr.org

BUG: 99380

svn path=/trunk/kdelibs/; revision=394564